Primer commit React

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,7 @@
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(
-      to bottom right,
+      to  right,
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0),
       rgba(1, 65, 255, 0.3)
@@ -88,7 +88,7 @@ body {
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
-      to bottom,
+      to ,
       transparent,
       rgb(var(--background-end-rgb))
     )
