--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,11 +1,96 @@
-.hola{
-    margin: 0px 8px 8px 0px;  
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
 }
-.xd img{   
-    width: 225px;
-    height: 50px;   
+.todo_container {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: relative;
+    padding: 20px;
 }
-.puntual{
-    margin: -8px 0px 0px -8px;
+.todo_container::after{
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    content: ' ';
+    background-image: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(213,213,213,1) 100%);
+    background-color: orange;
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
+    z-index: -1;
+}
+
+.todo_container h1 {
+    font-size: 50px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+}
+.container button {
+    font-size: 20px;
+    padding: 15px 40px;
+    border: none;
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+.container button svg {
+    margin-inline-start: 10px;
+    width: 20px;
+    height: 20px;
+}
+.container .GitHub svg {
+    margin-inline-start: 35px;
+}
+.container .LinkedIn svg {
+    margin-inline-start: 20px;
+}
+.container .Facebook svg {
+    color: black;
+}
+
+.container button:hover {
+    background-color: #0056b3;
+}
+.links_redirection{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    gap: 20px;
+}
+.links_redirection a {
+    text-decoration: none;
+    color: black;
+}
+.links_redirection a:hover {
+    text-decoration: underline;
+}
+.linuxs {
+    width: 24px;
+    height: 28px;
+}
+.gato img{
+    border-radius: 50px;
+    width: 200px;
+    height: 150px;
+    margin: 0px 0px 20px 0px;
 }
 
